--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "pytorch_influence_functions/test_influence_functions/leave_one_test"]
-	path = pytorch_influence_functions/test_influence_functions/leave_one_test
+[submodule "tests/leave_one_test"]
+	path = tests/leave_one_test
 	url = https://github.com/ryokamoi/influence_function_with_lissa.git
